System.Object[] Release 1.7.6 recipe safety and dependency resolution fixes